# worker-rs

./: .dockerignore  .env.testnet  .vendor-config.toml  Cargo.toml  Dockerfile  README.md  RESULT.md  bundle_sources.sh
.github/workflows/: docker.yml  sources.yml  tests.yaml
benches/: p2p_transport.rs  query.rs  query_throughput.rs
examples/: .gitattributes  query.rs
examples/queries/: mulitple_d8.json
examples/solana-mainnet-1/0322972440/0323024910-0323025440-CyzZjuKi/: balances.parquet  blocks.parquet  instructions.parquet  logs.parquet  rewards.parquet  token_balances.parquet  transactions.parquet
src/: cli.rs  controller.rs  http_server.rs  lib.rs  main.rs  metrics.rs
src/compute_units/: allocations_checker.rs  rate_limiter.rs
src/controller/: assignments.rs  experimental_engine.rs  http.rs  mod.rs  p2p.rs  polars_target.rs  query_deps.rs  sql_request.rs  worker.rs
src/gateway_allocations/: allocations_checker.rs  compute_units_storage.rs  mod.rs  rate_limiter.rs
src/logs_storage/: mod.rs
src/query/: context.rs  error.rs  eth.rs  mod.rs  processor.rs  result.rs  tests.rs
src/storage/: chunk_ordinals.rs  data_source.rs  datasets_index.rs  downloader.rs  guard.rs  layout.rs  local_fs.rs  manager.rs  mod.rs  s3_fs.rs  state.rs  tests.rs
src/transport/: http.rs  mod.rs  p2p.rs
src/types/: dataset.rs  mod.rs  os_str.rs  state.rs
src/util/: assignment.rs  hash.rs  iterator.rs  mod.rs  nested_map.rs  nested_set.rs  once.rs  run_all.rs  signature.rs  tests.rs  timestamp.rs
tests/: e2e.rs
