[package]
name = "sqd-worker"
license = "AGPL-3.0-or-later"
version = "2.0.0-rc1"
edition = "2021"

[[bin]]
name = "worker"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-stream = "0.3.5"
async-trait = "0.1.79"
axum = { version = "0.7.4", features = ["http2"] }
base64 = "0.21.7"
bs58 = "0.5.1"
camino = "1.1.6"
clap = { version = "4.4.18", features = ["derive", "env"] }
criterion = { version = "0.5.1", features = ["async_tokio"] }
crypto_box = "0.9.1"
curve25519-dalek = "4.1.3"
dotenv = "0.15.0"
flate2 = "1.0.28"
futures = "0.3.30"
glob = "0.3.1"
hmac = "0.12.1"
itertools = "0.12.0"
lazy_static = "1.4.0"
parking_lot = "0.12.1"
prometheus-client = "0.22.2"
prost = "0.12.3"
regex = "1.10.2"
reqwest = { version = "0.12.4", features = ["json", "stream"] }
scopeguard = "1.2.0"
sentry = { version = "0.32.2", features = ["tracing"] }
sentry-tower = { version = "0.32.2", features = ["axum", "http"] }
serde = "1.0.195"
serde-rename-rule = "0.2.2"
serde_json = { version = "1.0.111", features = ["preserve_order"] }
serde_with = { version = "3.11.0", features = ["base64"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
thiserror = "1.0.57"
tokio = { version = "1.35.1", features = ["full", "tracing", "test-util"] }
tokio-rusqlite = "0.5.1"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = "0.7.10"
tower-http = { version = "0.5.1", features = ["catch-panic"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
walkdir = "2.5.0"

sqd-contract-client = { git = "https://github.com/subsquid/sqd-network.git", rev = "ae53674", version = "1.1.0" }
sqd-messages = { git = "https://github.com/subsquid/sqd-network.git", rev = "ae53674", version = "2.0.0", features = ["bitstring", "assignment_reader"] }
sqd-network-transport = { git = "https://github.com/subsquid/sqd-network.git", rev = "ae53674", version = "2.0.0", features = ["worker", "metrics"] }
sqd-query = { git = "https://github.com/subsquid/data.git", rev = "f7f39e4", features = ["parquet"] }
sqd-polars = { git = "https://github.com/subsquid/data.git", rev = "f7f39e4" }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = "0.6"

[profile.release]
debug = true
opt-level = 3
