[package]
name = "sqd-worker"
license = "AGPL-3.0-or-later"
version = "2.6.1"
edition = "2021"

[dependencies]
anyhow = "1.0"
async-compression = { version = "0.4.27", features = ["gzip", "tokio"] }
async-stream = "0.3.5"
async-trait = "0.1.79"
axum = { version = "0.7.4", features = ["http2"] }
base64 = "0.21.7"
bs58 = "0.5.1"
camino = "1.1.6"
clap = { version = "4.4.18", features = ["derive", "env"] }
criterion = { version = "0.5.1", features = ["async_tokio"] }
chrono = "0.4"
crypto_box = "0.9.1"
curve25519-dalek = "4.1.3"
dotenv = "0.15.0"
flate2 = "1.0.28"
futures = "0.3.30"
glob = "0.3.1"
hmac = "0.12.1"
itertools = "0.12.0"
lazy_static = "1.4.0"
mimalloc = "0.1.43"
parking_lot = "0.12.1"
prometheus-client = "0.23"
polars-plan = "0.43.1"
polars = { version = "0.43.1", features = ["serde", "strings", "json", "polars-io", "polars-plan", "parquet", "dtype-full", "lazy", "temporal", "is_in"] }
prost = "0.13.5"
rand = "0.9.2"
regex = "1.10.2"
reqwest = { version = "0.12.8", features = ["json", "stream"] }
scopeguard = "1.2.0"
sentry = { version = "0.32.2", features = ["tracing"] }
sentry-tower = { version = "0.32.2", features = ["axum", "http"] }
serde = "1.0.195"
serde-rename-rule = "0.2.2"
serde_json = { version = "1.0.111", features = ["preserve_order"] }
serde_with = { version = "3.11.0", features = ["base64"] }
sha2 = "0.10.8"
sha3 = "0.10.8"
substrait = { version = "0.48.0", features = ["serde", "parse"] }
thiserror = "1.0.57"
tokio = { version = "1.35.1", features = ["full", "tracing", "test-util"] }
tokio-rusqlite = "0.5.1"
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-util = "0.7.10"
tower-http = { version = "0.5.1", features = ["catch-panic"] }
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-opentelemetry = "0.22.0"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"
walkdir = "2.5.0"
zstd = "0.13"

sqd-assignments = { git = "https://github.com/subsquid/sqd-network.git", rev = "c7fbb0b", features = ["reader"] }
sqd-contract-client = { git = "https://github.com/subsquid/sqd-network.git", rev = "c7fbb0b", version = "1.2.1" }
sqd-messages = { git = "https://github.com/subsquid/sqd-network.git", rev = "c7fbb0b", version = "2.0.2", features = ["bitstring"] }
sqd-network-transport = { git = "https://github.com/subsquid/sqd-network.git", rev = "c7fbb0b", version = "3.0.0", features = ["worker", "metrics"] }
sqd-query = { git = "https://github.com/subsquid/data.git", rev = "4c089d8", features = ["parquet"] }
sqd-polars = { git = "https://github.com/subsquid/data.git", rev = "4c089d8" }
#qplan = {git = "https://github.com/subsquid/qplan.git", rev = "354f265" }
qplan = { path = "../duck/qplan"}

[profile.release]
debug = true
opt-level = 3
